--- a/.github/workflows/auto_approve_pr.yml
+++ b/.github/workflows/auto_approve_pr.yml
@@ -2,7 +2,7 @@ name: 2 - Auto approve PRs
 on:
   pull_request:
     branches: ["master"]
-    types: ["opened"]
+    types: [ opened,reopened,labeled ]
 
 jobs:
   auto-approve:
